--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,35 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: monospace;
+  padding: 10px;
+  border-radius: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+div, p, button {
+  font-size: 20px;
+  color: #366b5a;
+}
+
+.scoreboard {
+  width: 500px;
+  background: aquamarine;
+  margin: auto;
+}
+
+.stats {
+  margin: auto;
+  background: #366b5a;
+  width: 100%;
+  color: aquamarine;
+}
+
+h1 {
+  text-align: center;
+  color: #366b5a;
+}
+
+.player {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
 }
